@@ -17,9 +17,6 @@ import com.example.bunsanedthinking_springback.entity.diseaseHistory.DiseaseHist
 import com.example.bunsanedthinking_springback.entity.endorsment.Endorsement;
 import com.example.bunsanedthinking_springback.entity.insurance.*;
 import com.example.bunsanedthinking_springback.entity.insuranceMoney.InsuranceMoney;
-import com.example.bunsanedthinking_springback.entity.loan.Collateral;
-import com.example.bunsanedthinking_springback.entity.loan.FixedDeposit;
-import com.example.bunsanedthinking_springback.entity.loan.InsuranceContract;
 import com.example.bunsanedthinking_springback.entity.loan.Loan;
 import com.example.bunsanedthinking_springback.entity.product.Product;
 import com.example.bunsanedthinking_springback.entity.product.ProductList;
@@ -60,6 +57,7 @@ import java.awt.image.BufferedImage;
 import java.sql.Date;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CustomerService {
@@ -210,29 +208,27 @@ public class CustomerService {
 	}
 
 	public List<GetAllInsuranceResponse> getAllInsurance() {
-		List<GetAllInsuranceResponse> result = new ArrayList<GetAllInsuranceResponse>();
-		for (Insurance insurance : insuranceEntityModel.getAll()) {
-			String name = insurance.getName();
-			String insuranceType = insurance.getInsuranceType().getName();
-			int id = insurance.getId();
-			int ageRange = insurance.getAgeRange();
-			int monthlyPremium = insurance.getMonthlyPremium();
-			result.add(new GetAllInsuranceResponse(name,
-					insuranceType, id, ageRange, monthlyPremium));
-		}
-		return result;
+		return insuranceEntityModel.getAll().stream()
+				.map(GetAllInsuranceResponse::of)
+				.collect(Collectors.toList());
 	}
 
-	public List<Disease> getAllDiseaseInsurance() {
-		return diseaseEntityModel.getAll();
+	public List<GetAllInsuranceResponse> getAllDiseaseInsurance() {
+		return diseaseEntityModel.getAll().stream()
+				.map(GetAllInsuranceResponse::of)
+				.collect(Collectors.toList());
 	}
 
-	public List<Injury> getAllInjuryInsurance() {
-		return injuryEntityModel.getAll();
+	public List<GetAllInsuranceResponse> getAllInjuryInsurance() {
+		return injuryEntityModel.getAll().stream()
+				.map(GetAllInsuranceResponse::of)
+				.collect(Collectors.toList());
 	}
 
-	public List<Automobile> getAllAutomobileInsurance() {
-		return automobileEntityModel.getAll();
+	public List<GetAllInsuranceResponse> getAllAutomobileInsurance() {
+		return automobileEntityModel.getAll().stream()
+				.map(GetAllInsuranceResponse::of)
+				.collect(Collectors.toList());
 	}
 
 	public Insurance getInsuranceByProductId(int id) throws NotExistException {
@@ -240,29 +236,27 @@ public class CustomerService {
 	}
 
 	public List<GetAllLoanReponse> getAllLoan() {
-		List<GetAllLoanReponse> result = new ArrayList<GetAllLoanReponse>();
-		for (Loan loan : loanEntityModel.getAll()) {
-			String name = loan.getName();
-			String loanType = loan.getLoanType().getName();
-			int id = loan.getId();
-			int interestRate = loan.getInterestRate();
-			int maximumMoney = loan.getMaximumMoney();
-			result.add(new GetAllLoanReponse(name, loanType,
-					id, interestRate, maximumMoney));
-		}
-		return result;
+		return loanEntityModel.getAll().stream()
+				.map(GetAllLoanReponse::of)
+				.collect(Collectors.toList());
 	}
 
-	public List<Collateral> getAllCollateralLoan() {
-		return collateralEntityModel.getAll();
+	public List<GetAllLoanReponse> getAllCollateralLoan() {
+		return collateralEntityModel.getAll().stream()
+				.map(GetAllLoanReponse::of)
+				.collect(Collectors.toList());
 	}
 
-	public List<FixedDeposit> getAllFixedDepositLoan() {
-		return fixedDepositEntityModel.getAll();
+	public List<GetAllLoanReponse> getAllFixedDepositLoan() {
+		return fixedDepositEntityModel.getAll().stream()
+				.map(GetAllLoanReponse::of)
+				.collect(Collectors.toList());
 	}
 
-	public List<InsuranceContract> getAllInsuranceContractLoan(ProductList productList) {
-		return insuranceContractEntityModel.getAll();
+	public List<GetAllLoanReponse> getAllInsuranceContractLoan(ProductList productList) {
+		return insuranceContractEntityModel.getAll().stream()
+				.map(GetAllLoanReponse::of)
+				.collect(Collectors.toList());
 	}
 
 	public Loan getLoanByProductId(int id) throws NotExistException {
@@ -277,28 +271,16 @@ public class CustomerService {
 
 	public List<GetAllContractByCustomerIdResponse> getAllContractByCustomerId(int id)
 			throws NotExistContractException, NotExistException {
-		List<GetAllContractByCustomerIdResponse> result = new ArrayList<GetAllContractByCustomerIdResponse>();
-		List<Contract> contracts = contractEntityModel.getAll().
-				stream().filter(e -> e.getCustomerID() == id).toList();
-		for (Contract contract : contracts) {
-			Product product = productEntityModel.getById(contract.getProductId());
-			if (!(product instanceof Insurance)) continue;
-			Insurance insurance = (Insurance) product;
+		return contractEntityModel.getAll().
+				stream().filter(e -> e.getCustomerID() == id)
+				.map(this::getOneContractByCustomerId)
+				.collect(Collectors.toList());
+	}
 
-			String name = insurance.getName();
-			String type = insurance.getInsuranceType().getName();
-			int insuranceId = insurance.getId();
-			int ageRange = insurance.getAgeRange();
-			int monthlyPremium = insurance.getMonthlyPremium();
-			String expirationDate = contract.getExpirationDate();
-			String date = contract.getDate();
-			int paymentDate = contract.getPaymentDate();
-			String status = contract.getContractStatus().getText();
-			result.add(new GetAllContractByCustomerIdResponse(name,
-					type, insuranceId, ageRange, monthlyPremium,
-					expirationDate, date, paymentDate, status));
-		}
-		return result;
+	private GetAllContractByCustomerIdResponse getOneContractByCustomerId(Contract contract) {
+		Product product = productEntityModel.getById(contract.getProductId());
+		if (!(product instanceof Insurance insurance)) return null;
+		return GetAllContractByCustomerIdResponse.of(contract, insurance);
 	}
 
 	public List<Contract> getAllAutomobileInsuranceContract() throws NotExistContractException, NotExistException {
@@ -306,7 +288,6 @@ public class CustomerService {
 		for (Automobile automobile : automobileEntityModel.getAll())
             result.addAll(getAllContractByProductId(automobile.getId()));
 		return result;
-		//		return contractList.getAllAutomobileInsuranceContract();
 	}
 
 	public List<Contract> getAllInjuryInsuranceContract() throws NotExistContractException, NotExistException {
@@ -336,30 +317,18 @@ public class CustomerService {
 				stream().filter(e -> e.getCustomerID() == id).toList();
 		for (Contract contract : contracts) {
 			Product product = productEntityModel.getById(contract.getProductId());
-			if (product instanceof Insurance) {
-				Insurance insurance = (Insurance)product;
-				if (insurance.getInsuranceType() == InsuranceType.Automobile)
+			if (product instanceof Insurance insurance)
+                if (insurance.getInsuranceType() == InsuranceType.Automobile)
 					return contract;
-			}
 		}
 		throw new NotExistContractException();
 	}
 
 	public List<GetAllAccidentByCustomerIdResponse> getAllAccidentByCustomerId(int id) throws NotExistException {
-		List<GetAllAccidentByCustomerIdResponse> result = new ArrayList<GetAllAccidentByCustomerIdResponse>();
-		List<Accident> accidents = accidentEntityModel.getAll().
-				stream().filter(e -> e.getCustomerID() == id).toList();
-		for (Accident accident : accidents) {
-			int accidentId  = accident.getId();
-			String serviceType = accident.getServiceType().getName();
-			String date = accident.getDate();
-			String customerName = accident.getCustomerName();
-			String customerPhoneNumber = accident.getCustomerPhoneNumber();
-			String processStatus = accident.getProcessStatus().getName();
-			result.add(new GetAllAccidentByCustomerIdResponse(accidentId, serviceType, date,
-					customerName, customerPhoneNumber, processStatus));
-		}
-		return result;
+		return accidentEntityModel.getAll().stream()
+				.filter(e -> e.getCustomerID() == id)
+				.map(GetAllAccidentByCustomerIdResponse::of)
+				.collect(Collectors.toList());
 	}
 
 	public Accident getAccidentById(int id) throws NotExistException {
@@ -368,21 +337,10 @@ public class CustomerService {
 
 	public List<GetAllComplaintsByCustomerIdResponse> getAllComplaintsByCustomerId(int id)
 			throws NotExistException {
-		List<GetAllComplaintsByCustomerIdResponse> result =
-				new ArrayList<GetAllComplaintsByCustomerIdResponse>();
-		List<Complaint> complaints = complaintEntityModel.getAll().
-				stream().filter(e -> e.getCustomerID() == id).toList();
-		for (Complaint complaint : complaints) {
-			String type = complaint.getComplaintType().getName();
-			int complaintId = complaint.getId();
-			String title = complaint.getTitle();
-			String postDate = complaint.getPostDate();
-			java.util.Date processingDate = complaint.getProcessingDate();
-			String status = complaint.getProcessStatus().getText();
-			result.add(new GetAllComplaintsByCustomerIdResponse(type, complaintId,
-					title, postDate, processingDate, status));
-		}
-		return result;
+		return complaintEntityModel.getAll().stream()
+				.filter(e -> e.getCustomerID() == id)
+				.map(GetAllComplaintsByCustomerIdResponse::of)
+				.collect(Collectors.toList());
 	}
 
 	public Complaint getComplaintById(int id) throws NotExistException {
